--- a/rigid_bodies.ipynb
+++ b/rigid_bodies.ipynb
@@ -9,25 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jenny/miniconda3/envs/planckton-dev/lib/python3.7/site-packages/mdtraj/core/trajectory.py:32: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
-      "  from collections import Iterable\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'opv_gaff': <foyer.forcefield.Forcefield object at 0x1487914d0>, 'opls-custom': <foyer.forcefield.Forcefield object at 0x1489d3350>}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.simplefilter(\"ignore\")\n",
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -85,18 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#compound_name = keys[0]\n",
-    "cztp = Compound(COMPOUND_FILE[keys[0]], rigid=True)   \n",
-    "p3ht = Compound(COMPOUND_FILE[keys[3]], rigid=True)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,30 +134,34 @@
       "notice(2): Neighbors included by diameter          : no\n",
       "notice(2): Neighbors excluded when in the same body: yes\n",
       "** starting run **\n",
-      "Time 00:00:01 | Step 1000 / 1000 | TPS 649.968 | ETA 00:00:00\n",
-      "Average TPS: 649.567\n",
+      "Time 00:00:01 | Step 1000 / 1000 | TPS 831.653 | ETA 00:00:00\n",
+      "Average TPS: 830.964\n",
       "---------\n",
       "-- Neighborlist stats:\n",
       "17 normal updates / 10 forced updates / 0 dangerous updates\n",
-      "n_neigh_min: 0 / n_neigh_max: 29 / n_neigh_avg: 7.20783\n",
+      "n_neigh_min: 0 / n_neigh_max: 29 / n_neigh_avg: 7.21084\n",
       "shortest rebuild period: 32\n",
       "-- Cell list stats:\n",
       "Dimension: 66, 66, 66\n",
       "n_min    : 0 / n_max: 19 / n_avg: 0.0011548\n",
       "** run complete **\n",
       "** starting run **\n",
-      "Time 00:00:02 | Step 3001 / 3001 | TPS 1934.49 | ETA 00:00:00\n",
-      "Average TPS: 1932.33\n",
+      "Time 00:00:02 | Step 3001 / 3001 | TPS 2035.01 | ETA 00:00:00\n",
+      "Average TPS: 2032.54\n",
       "---------\n",
       "-- Neighborlist stats:\n",
       "19 normal updates / 21 forced updates / 0 dangerous updates\n",
-      "n_neigh_min: 0 / n_neigh_max: 31 / n_neigh_avg: 6.93072\n",
-      "shortest rebuild period: 56\n",
+      "n_neigh_min: 0 / n_neigh_max: 31 / n_neigh_avg: 6.93373\n",
+      "shortest rebuild period: 52\n",
       "-- Cell list stats:\n",
       "Dimension: 66, 66, 66\n",
       "n_min    : 0 / n_max: 17 / n_avg: 0.0011548\n",
       "** run complete **\n",
+      "\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
       "CZTPTZITIC worked!\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
       "notice(2): Group \"all\" created containing 784 particles\n",
       "notice(2): -- Neighborlist exclusion statistics -- :\n",
       "notice(2): Particles with 0 exclusions             : 30\n",
@@ -233,7 +210,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
       "P3HT didn't work!\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
       "notice(2): Group \"all\" created containing 836 particles\n",
       "notice(2): -- Neighborlist exclusion statistics -- :\n",
       "notice(2): Particles with 0 exclusions             : 32\n",
@@ -282,7 +263,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
       "P3HT_16 didn't work!\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
       "notice(2): Group \"all\" created containing 214 particles\n",
       "notice(2): -- Neighborlist exclusion statistics -- :\n",
       "notice(2): Particles with 0 exclusions             : 4\n",
@@ -336,8 +321,8 @@
       "notice(2): Neighbors included by diameter          : no\n",
       "notice(2): Neighbors excluded when in the same body: yes\n",
       "** starting run **\n",
-      "Time 00:00:01 | Step 1000 / 1000 | TPS 732.124 | ETA 00:00:00\n",
-      "Average TPS: 731.447\n",
+      "Time 00:00:01 | Step 1000 / 1000 | TPS 829.929 | ETA 00:00:00\n",
+      "Average TPS: 829.181\n",
       "---------\n",
       "-- Neighborlist stats:\n",
       "24 normal updates / 10 forced updates / 0 dangerous updates\n",
@@ -348,8 +333,8 @@
       "n_min    : 0 / n_max: 18 / n_avg: 0.00128625\n",
       "** run complete **\n",
       "** starting run **\n",
-      "Time 00:00:02 | Step 3001 / 3001 | TPS 2282.1 | ETA 00:00:00\n",
-      "Average TPS: 2278.5\n",
+      "Time 00:00:02 | Step 3001 / 3001 | TPS 2303.61 | ETA 00:00:00\n",
+      "Average TPS: 2301.26\n",
       "---------\n",
       "-- Neighborlist stats:\n",
       "29 normal updates / 21 forced updates / 0 dangerous updates\n",
@@ -359,7 +344,11 @@
       "Dimension: 55, 55, 55\n",
       "n_min    : 0 / n_max: 18 / n_avg: 0.00128625\n",
       "** run complete **\n",
+      "\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
       "PTB7 worked!\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
       "notice(2): Group \"all\" created containing 332 particles\n",
       "notice(2): -- Neighborlist exclusion statistics -- :\n",
       "notice(2): Particles with 0 exclusions             : 10\n",
@@ -411,7 +400,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
       "CZTPTZ8FITIC didn't work!\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "\n",
       "notice(2): Group \"all\" created containing 386 particles\n",
       "notice(2): -- Neighborlist exclusion statistics -- :\n",
       "notice(2): Particles with 0 exclusions             : 14\n",
@@ -462,21 +455,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ITIC didn't work!\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-4c62fce5dbfd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mcomp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCompound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCOMPOUND_FILE\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrigid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mcompound\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcomp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mn_compounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Projects/planckton/planckton/init.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input_str, rigid)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0;31m# the compound should have\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mmol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_pybel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrigid_inds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconnect_rings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrigid_inds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Projects/planckton/planckton/utils/rigid.py\u001b[0m in \u001b[0;36mconnect_rings\u001b[0;34m(mol)\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0mconnected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mconnected\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m         \u001b[0mrings\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconnected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_rings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m     \u001b[0;31m# convert to numpy array so it can be used for indexing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Projects/planckton/planckton/utils/rigid.py\u001b[0m in \u001b[0;36m_check_rings\u001b[0;34m(rings)\u001b[0m\n\u001b[1;32m    155\u001b[0m         \u001b[0mconjugated\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew_rings\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 157\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mconjugated\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m                 \u001b[0mconjugated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "ITIC didn't work!\n",
+      "!!!!!!!!!!!!!!!!!!!!!!!\n",
+      "\n"
      ]
     }
    ],
@@ -491,11 +474,10 @@
     "        #print(packer.rigid_typeids,packer.rigid_inds)\n",
     "        typed_system = packer.pack()\n",
     "        #print(*zip(packer.rigid_typeids,packer.rigid_inds),sep=\"\\n\")\n",
-    "        hoomd.util.quiet_status()\n",
     "        my_sim = Simulation(                                                    \n",
     "            typed_system,                                                             \n",
     "            kT=3.0,                                                             \n",
-    "            gsd_write=1e2,                                                      \n",
+    "            gsd_write=1e2,                                                     \n",
     "            log_write=1e2,                                                                                                              \n",
     "            rigid_inds=packer.rigid_inds, \n",
     "            rigid_typeids=packer.rigid_typeids,\n",
@@ -504,10 +486,13 @@
     "            shrink_time=1e3,                                                    \n",
     "        )                                                                       \n",
     "        my_sim.run() \n",
-    "        hoomd.util.unquiet_status()\n",
+    "        print(\"\\n!!!!!!!!!!!!!!!!!!!!!!!\")\n",
     "        print(f\"{key} worked!\")\n",
+    "        print(\"!!!!!!!!!!!!!!!!!!!!!!!\\n\")\n",
     "    except RuntimeError:\n",
-    "        print(f\"{key} didn't work!\")"
+    "        print(\"\\n!!!!!!!!!!!!!!!!!!!!!!!\")\n",
+    "        print(f\"{key} didn't work!\")\n",
+    "        print(\"!!!!!!!!!!!!!!!!!!!!!!!\\n\")"
    ]
   },
   {
