todo list so i remember on monday

--- a/rigid_bodies.ipynb
+++ b/rigid_bodies.ipynb
@@ -39,6 +39,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO:\n",
+    "- write compound.visualize_rigid()\n",
+    "- figure out why some compounds work and some don't"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
