--- a/rigid_bodies.ipynb
+++ b/rigid_bodies.ipynb
@@ -35,7 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# trying to modify planckton's init and sim functions"
+    "# testing \n",
+    "### planckton's rigid init and sim functions with provided compounds"
    ]
   },
   {
